<resources>
    <!-- General -->
    <string name="app_name">GetFood</string>
    <string name="logo">Logo</string>

    <!--Navigation-->
    <string name="home">Home</string>
    <string name="add_list">Add list</string>
    <string name="profile">Profile</string>
    <string name="family">Family</string>
    <string name="logout">Logout</string>

    <!-- Login Page -->
    <string name="login_title">Login</string>
    <string name="login_username">Email</string>
    <string name="login_password">Password</string>
    <string name="login_welcome">Welcome to GetFood!</string>
    <string name="login_punchline">\"Getting food should be simple\"</string>
    <string name="login_sign_up">No account? Sign up!</string>
    <string name="login_first_name">Firstname</string>
    <string name="login_last_name">Lastname</string>
    <string name="login_register">Register</string>
    <string name="login_to_title">Back</string>

    <!-- Getting Started Page -->
    <string name="getting_started_title">Let\'s get started!</string>
    <string name="getting_started_punchline">\"Join a family or create one\"</string>
    <string name="getting_started_or">Or</string>
    <string name="getting_started_create_family">Create Family</string>
    <string name="getting_started_create_family_description">Please fill in the name of your family.</string>
    <string name="getting_started_join_family">Join family</string>
    <string name="getting_started_join_successful">Congrats! You have joined the family!</string>
    <string name="description_camera">Camera</string>

    <!-- Home Page -->
    <string name="home_title">My Lists</string>
    <string name="home_list_item_date">Created on</string>
    <string name="home_create_list">Create new list</string>
    <string name="home_update_list">Update list</string>
    <string name="home_list_description">Please fill in the name of the list</string>

    <!-- Shopping List Page -->
    <string name="shopping_list_title">My Shopping List</string>
    <string name="shopping_list_edit_menu_button">Edit</string>
    <string name="shopping_list_remove_menu_button">Delete</string>
    <string name="shopping_list_create_item_title">Add new item</string>
    <string name="shopping_list_create_item_description">Please fill in the name of the list item.</string>

    <!-- Create List Page -->
    <string name="create_list_title">Create list</string>

    <!-- Profile  Page -->
    <string name="profile_update_account">Update account</string>
    <string name="profile_delete_account">Done with GetFood? Delete your account!</string>
    <string name="family_members">Members</string>
    <string name="family_leave">Tired of this family? Leave it!</string>
    <string name="not_ready_yet_go_back_to_login">Not ready yet? Go back to Login!</string>

    <string name="general_title">Title</string>
    <string name="create_list_prompt">Enter your recipe title:</string>
    <string name="let_others_scan_the_qr_code_to_join_family">(show this qr code to a family member to join)</string>
    <string name="new_password">(new password)</string>
    <string name="clear_finished_items">Clear finished items</string>

</resources>
