<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"
                android:gravity="center"
                android:src="@drawable/ic_getfood_logo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/login_welcome"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/login_punchline"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="35dp">

            <TextView
                android:id="@+id/username-text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:labelFor="@id/email"
                android:text="@string/login_username"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/default_card"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="15dp" />

            <TextView
                android:id="@+id/password-text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:labelFor="@id/password"
                android:text="@string/login_password"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/default_card"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingHorizontal="15dp" />

            <!-- First Name -->
            <TextView
                android:id="@+id/first-name-text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:labelFor="@id/first-name"
                android:text="@string/login_first_name"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/first-name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/default_card"
                android:ems="10"
                android:inputType="text"
                android:paddingHorizontal="15dp" />
            <!-- End First Name -->

            <TextView
                android:id="@+id/last-name-text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:labelFor="@id/last-name"
                android:text="@string/login_last_name"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/last-name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/default_card"
                android:ems="10"
                android:inputType="text"
                android:paddingHorizontal="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/to_login"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/default_button"
                    android:layout_marginEnd="10dp"
                    android:text="@string/login_to_title"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextDark" />
                <Button
                    android:id="@+id/register"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/default_button"
                    android:text="@string/login_register"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextDark" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>