<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:gravity="center"
            android:src="@drawable/ic_getfood_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/getting_started_title"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/getting_started_punchline"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/getting-started-buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/join-family-button"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/default_card">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_above="@+id/getting-started-join-family"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/description_camera"
                    android:src="@drawable/ic_camera_18" />

                <TextView
                    android:id="@+id/getting-started-join-family"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/getting_started_join_family"
                    android:textColor="@color/colorText"
                    android:textSize="14sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/getting-started-or"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/getting_started_or"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />

            <RelativeLayout
                android:id="@+id/create-family-button"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/default_card">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_above="@+id/getting-started-create-family"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/description_camera"
                    android:src="@drawable/ic_multiple_11" />

                <TextView
                    android:id="@+id/getting-started-create-family"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/getting_started_create_family"
                    android:textColor="@color/colorText"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <TextView
            android:id="@+id/not-ready"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:labelFor="@id/password"
            android:text="@string/not_ready_yet_go_back_to_login"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</RelativeLayout>