<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user-initials-block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/initials_circle_white"
                android:elevation="4dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:padding="15dp"
                android:text="JD"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/profile-full-name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="John Doe"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="35dp">

            <!-- Start of Username -->
            <TextView
                android:id="@+id/profile_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_medium"
                android:labelFor="@id/profile_email"
                android:text="@string/login_username"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/default_card"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="15dp" />
            <!-- End of Username -->

            <!-- Start of Password -->
            <TextView
                android:id="@+id/profile_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_medium"
                android:labelFor="@id/profile_password"
                android:text="@string/login_password"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/profile_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/default_card"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingHorizontal="15dp" />
            <!-- End of Password -->

            <!-- Start of First name -->
            <TextView
                android:id="@+id/profile_firstname_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_medium"
                android:labelFor="@id/profile_firstname"
                android:text="@string/login_first_name"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/profile_firstname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/default_card"
                android:ems="10"
                android:inputType="text"
                android:paddingHorizontal="15dp" />
            <!-- End of First name -->

            <!-- Start of Last name -->
            <TextView
                android:id="@+id/profile_lastname_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_medium"
                android:labelFor="@id/profile_lastname"
                android:text="@string/login_last_name"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/profile_lastname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/default_card"
                android:ems="10"
                android:inputType="text"
                android:paddingHorizontal="15dp" />
            <!-- End of Last name -->

            <Button
                android:id="@+id/update-account"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/blue_card_30"
                android:text="@string/profile_update_account"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/delete-account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/profile_delete_account"
                android:textColor="@color/colorText" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
